--- a/public/offline.html
+++ b/public/offline.html
@@ -1,22 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Offline - STEM Village</title>
-  <link rel="manifest" href="/manifest.json" />
-  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#3b82f6">
   <style>
-    body { font-family: sans-serif; background: #2563eb; color: #fff; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; }
-    .offline-card { background: #fff; color: #2563eb; padding: 2rem; border-radius: 1rem; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    a { color: #2563eb; text-decoration: underline; }
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 2rem;
+      background: #f3f4f6;
+    }
+    .offline-container {
+      max-width: 600px;
+      margin: 0 auto;
+      background: white;
+      border-radius: 1rem;
+      padding: 2rem;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+    .offline-nav {
+      margin-top: 2rem;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      justify-content: center;
+    }
+    .offline-nav a {
+      background: #2563eb;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      border-radius: 0.5rem;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.2s;
+    }
+    .offline-nav a:hover {
+      background: #1e40af;
+    }
+    @media (max-width: 600px) {
+      .offline-nav {
+        flex-direction: column;
+      }
+      .offline-nav a {
+        width: 100%;
+      }
+    }
   </style>
 </head>
 <body>
-  <div class="offline-card">
-    <h1>You are offline</h1>
-    <p>This page is available as a fallback when you lose connection.</p>
-    <a href="/">Go back to Home</a>
+  <div class="offline-container">
+    <h1>🌐 You're Offline</h1>
+    <p>Don't worry! STEM Village works offline too. You can still access cached content and continue learning.</p>
+    <div class="offline-nav">
+      <a href="/">Home</a>
+      <a href="/dashboard">Dashboard</a>
+      <a href="/games">Games</a>
+      <a href="/login">Login</a>
+      <a href="/teacher/login">Teacher Login</a>
+    </div>
+    <p style="margin-top: 2rem; color: #6b7280; font-size: 0.9rem;">
+      Your progress is automatically saved and will sync when you're back online.
+    </p>
   </div>
+  <noscript>
+    <p style="color:red; margin-top: 2rem;">JavaScript is required for full functionality. Please enable JavaScript in your browser.</p>
+  </noscript>
 </body>
 </html>
